# Heat-Transfer-App

./: CMakeLists.txt  CalculateDistanceBetweenTwoNodes_UnitTest.cpp  GetNodeEquation_UnitTest.cpp  HeatTransferNode.cpp  HeatTransferNode.h  HeatTransferWorld.cpp  HeatTransferWorld.h  HeatTransferWorldAccessPrivateDataFunctions.cpp  IdentifyHeatTransferNodeCase_UnitTest.cpp  IdentifyNeighborNodes_UnitTest.cpp  MouseInteractorStylePP.cpp  MouseInteractorStylePP.h  README.md  heatTransferFD.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.e  qhoversensitivebutton.cpp  qhoversensitivebutton.h
